[package]
name = "audio"
version = "0.1.0"
authors = ["Julien Fauville <fauville.j@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.48"
js-sys = "0.3.25"

[dependencies.web-sys]
version = "0.3.25"
features = [
  'AudioContext',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'BaseAudioContext',
  'AudioDestinationNode',
  'AudioNode',
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "BinaryType"
]